tests/negative/gold/ambiguous-assign-test.gold
tests/negative/ambiguous-assign-test.toit:9:3: error: Ambiguous resolution of 'bar'
  bar = 3
  ^~~
tests/negative/ambiguous-a.toit:8:1: note: Resolution candidate for 'bar'
bar := 0
^~~
tests/negative/ambiguous-b.toit:8:1: note: Resolution candidate for 'bar'
bar := 0
^~~
Compilation failed
